--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "root",
-  "private": true,
+  "name": "toupil-ui",
   "workspaces": [
     "packages/*"
   ],
+  "version": "1.0.1",
   "devDependencies": {
     "lerna": "^6.6.1"
   },
@@ -11,12 +11,17 @@
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
+    "@lerna/project": "^6.4.1",
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "@vue/compiler-sfc": "^3.2.47",
     "babel-loader": "^9.1.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "rollup": "^3.22.0",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
@@ -30,6 +35,8 @@
     "webpack-dev-server": "^4.13.1"
   },
   "scripts": {
-    "dev": "webpack serve --config ./website/webpack.config.js"
+    "dev": "webpack serve --config ./website/webpack.config.js",
+    "build": "webpack --config ./build/webpack.config.js",
+    "build:esm-bundle": "rollup -c  --bundleConfigAsCjs ./rollup.config.js"
   }
 }
