--- a/packages/component/input/package.json
+++ b/packages/component/input/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@tp-ui/component/common",
+  "name": "@tp-ui/component/input",
   "version": "0.0.0",
   "description": "> TODO: description",
-  "author": "toupil111 <toupil272@gmail.com>",
+  "author": "toupiL <toupil272@gmail.com>",
   "homepage": "https://github.com/toupil111/tp-ui#readme",
   "license": "ISC",
-  "main": "lib/common.js",
+  "main": "lib/input.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/toupil111/tp-ui.git"
   },
   "scripts": {
-    "test": "node ./__tests__/common.test.js"
+    "test": "node ./__tests__/input.test.js"
   },
   "bugs": {
     "url": "https://github.com/toupil111/tp-ui/issues"
